kubernetes/catalogue-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue
spec:
  replicas: 4
  selector:
    matchLabels:
      app: catalogue
  template:
    metadata:
      labels:
        app: catalogue
    spec:
      containers:
      - name: catalogue
        image: molotovhammr/catalogue-service:latest
        imagePullPolicy: Always
        resources:
        #   requests:
        #     memory: "100Mi"
        #     cpu: "0.05"
          requests:
            memory: "128Mi"
            cpu: "0.08"
        ports:
        - containerPort: 80
