kubernetes/catalogue-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalogue
spec:
  type: LoadBalancer
  selector:
    app: catalogue
  ports:
  - port: 80
    targetPort: 80
