kubernetes/catalogue-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  labels:
    name: test-ingress
spec:
  rules:
  - host: grocios
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: catalogue
            port: 
              number: <Port>
